Sat Sep 13 18:39:41 CDT 2003 Adam Heath <doogie@debian.org>

  * archtable: Added alphaev68-linux-gnu to archtable.

Sat Sep 13 17:18:46 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.pl: Add .svn, {arch}, and .arch-ids to dpkg-source
    -i default regex.

Sat Sep 13 16:34:53 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/parse.c: Change use of strncpy in parsedb to memcpy.

Sat Sep 13 16:28:52 CDT 2003 Adam Heath <doogie@debian.org>

  * main/main.c: Fix segfault with --status-fd.

Sat Sep 13 16:26:36 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-source.pl: Add .cvsignore to dpkg-source's default diff
    ignore regex.  Also fix missing \ escape for .deps.

Sat Sep 13 16:16:52 CDT 2003 Adam Heath <doogie@debian.org>

  * main/remove.c: Retry removing empty dirs during purge.

Sat Sep 13 16:09:13 CDT 2003 Adam Heath <doogie@debian.org>

  * main/filesdb.c: Increase filesdb bin size, and alter hashing function.

Sat Sep 13 16:04:37 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-statoverride.pl: Fix "stripping trailing /" message from
    dpkg-statoverride.

Sat Sep 13 15:56:13 CDT 2003 Adam Heath <doogie@debian.org>

  * automake/tools.m4, dselect/Makefile.in, methods/disk.setup,
    scripts/dpkg-parsechangelog.pl, scripts/dpkg-source.pl: Apply patch to
    make dpkg work with POSIX 1003.1-2001.

Sat Sep 13 15:40:39 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/database.c: Apply patch to change hashing function, and increase
    bin size, for the package database.

Sat Sep 13 15:20:56 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/enquiry.c, scripts/dpkg-architecture.pl: dpkg --print-architecture
    now does gcc -dumpmachine instead of --print-libgcc-file-name.

Sat Sep 13 14:38:55 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/dpkg-doc.postinst: Add set -e.

Sat Sep 13 14:36:37 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/parse.c: Fix inverted test of eof in parsedb, while looking for eof