@@ -73,6 +73,8 @@ NLS_LIBS		= @INTLLIBS@
 
 SSD_LIBS		= @SSD_LIBS@
 
+CURSES_LIBS		= @CURSES_LIBS@
+
 ZLIB_CFLAGS		= @ZLIB_CFLAGS@
 ZLIB_LIBS		= @ZLIB_LIBS@
 ZLIB_LIBS_ALSO_STATIC	= @ZLIB_LIBS_ALSO_STATIC@
