@@ -53,7 +53,8 @@ i386-netbsdelf-gnu	netbsd-i386	netbsd-i386
 s390-linux-gnu		s390		s390
 s390-ibm-linux-gnu	s390		s390
 s390-unknown-linux-gnu	s390		s390
-i386-openbsd2.8		openbsd-i386	i386
+i386-openbsd		openbsd-i386	openbsd-i386
+i386-unknown-openbsd	openbsd-i386	openbsd-i386
 powerpc-darwin		darwin-powerpc	darwin-powerpc
 i386-darwin		darwin-i386	darwin-i386
 s390x-linux-gnu		s390x		s390x
