@@ -46,6 +46,8 @@ dpkg (1.10.11) unstable; urgency=low
     Closes: #169359
   * Falk Hueffner <falk@debian.org>:
     Added alphaev68-linux-gnu to archtable.  Closes: #199360
+  * Elie Rosenblum <fnord@debian.org>:
+    Apply patch to support OpenBSD.  Closes: #154277
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
