@@ -1,3 +1,9 @@
+Sat Sep 13 18:42:27 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * Makefile.conf.in, archtable, configure.in, dselect/Makefile.in,
+    lib/varbuf.c, scripts/dpkg-{architecture,shlibdeps}.pl,
+    utils/start-stop-daemon.c: Support OpenBSD.
+
 Sat Sep 13 18:39:41 CDT 2003 Adam Heath <doogie@debian.org>
 
   * archtable: Added alphaev68-linux-gnu to archtable.
